# aid

./: .gitignore  docker-compose.yml
.tmp_fig/: canvas.fig  meta.json
admin_panel/: Dockerfile  app.py  auth.py  config.py  storage.py
admin_panel/static/: admin.css  admin.js
admin_panel/templates/: base.html  dashboard.html
bot/: bot.py  example.env  openai_client.py  request_2_openai.py
bot/docs_json/: contract.json  pl.json  (+1 more)
site/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  wsgi.py
site/backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
site/backend/aiddoc_landing_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
site/backend/alembic/: env.py
site/backend/alembic/versions/: 0001_create_landing_tables.py
site/backend/app/: main.py
site/backend/app/api/v1/: router.py
site/backend/app/api/v1/routes/: admin.py  auth.py  events.py  health.py  leads.py
site/backend/app/core/: config.py  security.py
site/backend/app/db/: base.py  session.py
site/backend/app/middlewares/: error_handlers.py
site/backend/app/models/: cta_click.py  lead.py  setting.py
site/backend/app/repositories/: __init__.py  cta_click_repository.py  lead_repository.py
site/backend/app/schemas/: __init__.py  auth.py  common.py  event.py  lead.py
site/backend/app/services/: __init__.py  auth_service.py  event_service.py  lead_service.py
site/backend/tests/: test_health.py
web_app/: Dockerfile  agreement_request.py  cmr_request.py  env_example  invoice_request.py  main.py  packing_list_request.py  requirements.txt  tnved_request.py
(+68 files in other folders)
